# lets_ride/views/accept_asset_request/api_wrapper.py
@@ -1,29 +1,31 @@
 from django_swagger_utils.drf_server.utils.decorator.interface_decorator \
     import validate_decorator
 from .validator_class import ValidatorClass
+from django.http import HttpResponse
+from lets_ride.storages.accept_asset_request_storage_implementation \
+    import AcceptAssetRequestStorageImplementation
+from lets_ride.interactors.accept_asset_request_interactor \
+    import AcceptAssetRequestInteractor
 
 
 @validate_decorator(validator_class=ValidatorClass)
 def api_wrapper(*args, **kwargs):
-    # ---------MOCK IMPLEMENTATION---------
+    user_obj = kwargs['user']
+    user_id = user_obj.id
+    request_data = kwargs['request_data']
+    asset_request_id = request_data['asset_request_id']
+    ride_matching_id = request_data['ride_matching_id']
+    travel_matching_id = request_data['travel_matching_id']
+    print("asset_request_id = ", asset_request_id)
+    print("ride_matching_id = ", ride_matching_id)
+    print("travel_matching_id = ", travel_matching_id)
+    storage = AcceptAssetRequestStorageImplementation()
+    interactor = AcceptAssetRequestInteractor(storage=storage)
+    interactor.accept_asset_request_wrapper(
+        user_id=user_id,
+        asset_request_id=asset_request_id,
+        ride_matching_id=ride_matching_id,
+        travel_matching_id=travel_matching_id
+    )
+    return HttpResponse(status=200)
 
-    try:
-        from lets_ride.views.accept_asset_request.tests.test_case_01 \
-            import TEST_CASE as test_case
-    except ImportError:
-        from lets_ride.views.accept_asset_request.tests.test_case_01 \
-            import test_case
-
-    from django_swagger_utils.drf_server.utils.server_gen.mock_response \
-        import mock_response
-    try:
-        from lets_ride.views.accept_asset_request.request_response_mocks \
-            import RESPONSE_200_JSON
-    except ImportError:
-        RESPONSE_200_JSON = ''
-    response_tuple = mock_response(
-        app_name="lets_ride", test_case=test_case,
-        operation_name="accept_asset_request",
-        kwargs=kwargs, default_response_body=RESPONSE_200_JSON,
-        group_name="")
-    return response_tuple[1]
