# lets_ride/views/accept_ride_request/api_wrapper.py
@@ -1,29 +1,27 @@
 from django_swagger_utils.drf_server.utils.decorator.interface_decorator \
     import validate_decorator
 from .validator_class import ValidatorClass
+from django.http import HttpResponse
+from lets_ride.storages.accept_ride_request_storage_implementaion \
+    import AcceptRideRequestStorageImplementation
+from lets_ride.interactors.accept_ride_request_interactor \
+    import AcceptRideRequestInteractor
 
 
 @validate_decorator(validator_class=ValidatorClass)
 def api_wrapper(*args, **kwargs):
-    # ---------MOCK IMPLEMENTATION---------
-
-    try:
-        from lets_ride.views.accept_ride_request.tests.test_case_01 \
-            import TEST_CASE as test_case
-    except ImportError:
-        from lets_ride.views.accept_ride_request.tests.test_case_01 \
-            import test_case
-
-    from django_swagger_utils.drf_server.utils.server_gen.mock_response \
-        import mock_response
-    try:
-        from lets_ride.views.accept_ride_request.request_response_mocks \
-            import RESPONSE_200_JSON
-    except ImportError:
-        RESPONSE_200_JSON = ''
-    response_tuple = mock_response(
-        app_name="lets_ride", test_case=test_case,
-        operation_name="accept_ride_request",
-        kwargs=kwargs, default_response_body=RESPONSE_200_JSON,
-        group_name="")
-    return response_tuple[1]
+    user_obj = kwargs['user']
+    user_id = user_obj.id
+    request_data = kwargs['request_data']
+    ride_request_id = request_data['ride_request_id']
+    ride_matching_id = request_data['ride_matching_id']
+    print("ride_request_id = ", ride_request_id)
+    print("ride_matching_id = ", ride_matching_id)
+    storage = AcceptRideRequestStorageImplementation()
+    interactor = AcceptRideRequestInteractor(storage=storage)
+    interactor.accept_ride_request_wrapper(
+        user_id=user_id,
+        ride_request_id=ride_request_id,
+        ride_matching_id=ride_matching_id
+    )
+    return HttpResponse(status=200)
